# dual_ur_robotiq

./: README.md  README_2.md
bimanual_manipulation/: CMakeLists.txt  README.md  alpha_puzzle.md  camera_pose.md  package.xml  pick_place.md  readme.md
bimanual_manipulation/data/: sample_trajectory.txt
bimanual_manipulation/include/: trajectory.h
bimanual_manipulation/launch/: cam_ar_track.launch
bimanual_manipulation/src/: alpha_puzzle.cpp  bimanual_manipulation_demo.cpp  camera_pose_estimate.cpp  command_robot_example.cpp  default.rviz  moveit.rviz  pick_place.cpp  pick_place_no_collision.cpp  trajectory.cpp
dual_arm_bringup/: CMakeLists.txt  package.xml
dual_arm_bringup/config/: left_arm_controllers.yaml  right_arm_controllers.yaml
dual_arm_bringup/launch/: dual_arm_bringup.launch  left_arm_bringup.launch  right_arm_bringup.launch  ur5_bringup.launch
dual_arm_description/: CMakeLists.txt  package.xml
dual_arm_description/launch/: dual_arm_upload.launch  ur5e_upload.launch  view_dual_ur5e.launch  view_ur5e.launch
dual_arm_description/urdf/: dual_arm.urdf.xacro  ur.transmission.xacro  ur5e.urdf.xacro  ur5e_joint_limited_robot.urdf.xacro  ur5e_robot.urdf.xacro
dual_arm_gazebo/: CMakeLists.txt  package.xml
dual_arm_gazebo/controller/: arm_controller_ur5e.yaml  dual_arm_controller.yaml  gazebo_controller.yaml
dual_arm_gazebo/launch/: controller_utils.launch  dual_arm.launch  dual_arm_bringup.launch  dual_arm_gazebo.launch
dual_arm_gazebo/launch/inc/: load_dual_arm.launch.xml
dual_arm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
dual_arm_moveit_config/config/: fake_controllers.yaml  ompl_planning.yaml  robot.srdf  ros_controllers.yaml  ur5.srdf
dual_arm_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  dual_arm_moveit_planning_execution.launch  gazebo.launch  move_group.launch  moveit_rviz.launch  planning_context.launch  robot_move_group_python.launch  robot_moveit_controller_manager.launch.xml  robot_moveit_planning_execution.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  ur5_moveit_controller_manager.launch.xml  warehouse.launch
dual_ur5e_description/launch/: view_dual_ur5e.launch
dual_ur_robotiq_description/: CMakeLists.txt  package.xml
dual_ur_robotiq_description/launch/: bringup_robot.launch  dual_arm_upload.launch  load_dual_arm.launch  upload_grippers.launch  ur5e_upload.launch  view_dual_ur5e.launch  view_ur5e.launch
dual_ur_robotiq_description/urdf/: dual_ur_robotiq.urdf.xacro  robot.urdf.xacro  ur.gazebo.xacro  ur5e.urdf.xacro  ur5e_joint_limited_robot.urdf.xacro  ur5e_robot.urdf.xacro
etc/dual_arm_moveit_config/: package.xml
etc/dual_arm_moveit_config/config/: controllers.yaml  fake_controllers.yaml  robot.srdf
etc/dual_arm_moveit_config/launch/: demo.launch  gazebo.launch  move_group.launch  (+5 more)
pick_place/: CMakeLists.txt  package.xml  readme.md
pick_place/src/: default.rviz  moveit.rviz  pick_place_collision.cpp
robot_gazebo/: CMakeLists.txt  package.xml
robot_gazebo/launch/: controller_utils.launch  dual_ur_robotiq.launch  ur5e.launch  ur5e_joint_limited.launch
robot_gazebo/tests/: roslaunch_test.xml
robot_gazebo/worlds/: empty.world
robot_moveit_config/: .setup_assistant  package.xml
robot_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  robot.srdf  ros_controllers.yaml  sensors_3d.yaml
robot_moveit_config/launch/: chomp_planning_pipeline.launch.xml  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  moveit_cam_pose_estim.rviz  moveit_drawing.rviz  moveit_drawing_sphere.launch  moveit_old.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  robot_moveit_controller_manager.launch.xml  robot_moveit_planning_execution.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
universal_robots/: package.xml
ur5_e_moveit_config/: .setup_assistant  package.xml
ur5_e_moveit_config/launch/: planning_context.launch
ur5e_moveit_config/config/: ros_controllers.yaml
ur5e_moveit_config/launch/: move_group.launch  moveit.rviz  moveit_rviz.launch  ur5e_moveit_controller_manager.launch.xml  ur5e_moveit_planning_execution.launch
ur_description/launch/: load_dual_arm.launch
ur_description/urdf/: dual_ur5e.urdf.xacro
ur_e_description/launch/: dual_arm_upload.launch  dual_ur5e_upload.launch
ur_e_description/urdf/: dual_ur5e_robot.urdf.xacro  dual_ur_robotiq.urdf.xacro
ur_e_gazebo/: package.xml
ur_e_gazebo/controller/: dual_arm_controller.yaml
ur_e_gazebo/launch/: controller_utils.launch  dual_arm.launch  dual_ur_robotiq.launch  ur5e.launch
ur_e_gazebo/worlds/: empty.world  table.world  table_box.world
