<?xml version="1.0"?>
<package format="2">
  <name>dual_arm_bringup</name>
  <version>1.2.7</version>
  <description>The dual_arm_bringup package</description>

  <author>Yaesol kim</author>
  <maintainer email="yaesol@ewha.ac.kr"> yaesol </maintainer>

  <license>BSD</license>
  <url type="website"> </url>

  <buildtool_depend>catkin</buildtool_depend>
  <test_depend>roslaunch</test_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>ur_description</exec_depend>
  <exec_depend>ur_driver</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <export>
  </export>
</package>
