<package format="2">

  <name>dual_arm_gazebo</name>
  <version>0.3.0</version>
  <description>
    ha...
  </description>
  <author email="yaesol@ewha.ac.kr">yaesol</author>
  <maintainer email="yaesol@ewha.ac.kr">yaesol</maintainer>

  <license>BSD</license>

  <url type="website">http://moveit.ros.org/</url>
  <url type="bugtracker">https://github.com/ros-planning/moveit/issues</url>
  <url type="repository">https://github.com/ros-planning/moveit</url>

  <buildtool_depend>catkin</buildtool_depend>

<buildtool_depend>catkin</buildtool_depend>
<test_depend>roslaunch</test_depend>
<exec_depend>controller_manager</exec_depend>
<exec_depend>effort_controllers</exec_depend>
<exec_depend>gazebo_ros</exec_depend>
<exec_depend>gazebo_ros_control</exec_depend>
<exec_depend>joint_state_controller</exec_depend>
<exec_depend>joint_trajectory_controller</exec_depend>
<exec_depend>position_controllers</exec_depend>
<exec_depend>robot_state_publisher</exec_depend>
<exec_depend>ur_description</exec_depend>
<export> </export>

</package>
